@@ -1,199 +1,176 @@
+# Winds JX3
 
-## README
+![Java](https://img.shields.io/badge/Java-21-orange)
+![Spring Boot](https://img.shields.io/badge/Spring%20Boot-3.3.1-6DB33F)
+![License](https://img.shields.io/badge/License-Apache%202.0-blue)
 
-剑三相关数据处理API，基于SpringBoot 3.3.1
+Winds JX3 是一个面向《剑网 3》相关业务的模块化后端服务，基于 Java 21 与 Spring Boot 3.3.1 构建。项目统一提供技艺成本计算、JX3API 代理、黄历图片管理、微博动态监控以及 WebSocket 实时推送能力。
 
-## 环境依赖
-- openjdk-21 | openjdk-21-graalvm
+## 功能特性
 
+- **技艺成本计算**：支持单个或批量计算技艺制品成本，并使用 Redis 缓存查询结果。
+- **JX3API 代理**：统一封装第三方 JX3API 请求及认证参数。
+- **黄历管理**：上传黄历图片至阿里云 OSS，按日期保存 MongoDB 记录并发布更新事件。
+- **微博监控**：管理监控博主与抓取账号，定时拉取最新动态，通过 MongoDB 锁支持多实例调度。
+- **实时推送**：通过统一的 `/ws` 端点推送连接、黄历更新和微博更新事件。
+- **接口文档**：集成 Knife4j、Swagger UI 与 OpenAPI JSON。
 
-## 部署
+## 技术栈
 
-- 打包：`mvn clean package -DskipTests`
-- 启动：`java -jar winds-application/target/winds-application.jar`
+| 类别 | 技术 |
+| --- | --- |
+| 运行环境 | Java 21 |
+| 应用框架 | Spring Boot 3.3.1 |
+| 构建工具 | Maven 多模块工程 |
+| 数据存储 | MongoDB |
+| 缓存 | Redis |
+| 对象存储 | Alibaba Cloud OSS |
+| 实时通信 | Spring WebSocket |
+| 接口文档 | Springdoc OpenAPI、Knife4j |
 
-- Docker部署
+## 项目结构
 
-> jdk21运行镜像构建文件
+| 模块 | 职责 |
+| --- | --- |
+| `winds-application` | 统一启动入口、运行配置与可执行 Jar 打包 |
+| `winds-common` | 跨模块共享的响应模型、基础实体与公共能力 |
+| `winds-costing` | 技艺成本计算、JX3Box 数据访问、JX3API 代理与缓存 |
+| `winds-bot` | 黄历图片上传、MongoDB 持久化、OSS 存储与领域事件发布 |
+| `winds-scout` | 微博博主和抓取账号管理、定时监控与动态持久化 |
+| `winds-ws` | WebSocket 接入、Token 鉴权与业务事件广播 |
 
-```dockerfile
-FROM meltwaterfoundation/drone-maven-jdk21:latest
-WORKDIR /app
-EXPOSE 9001
-CMD ["sh", "-c", "java -jar --enable-preview /app/${JAR_NAME}"]
-```
-
-> 部署服务
-
-```shell
-# 部署redis
-docker run -d -p 6379:6379 \
--v /home/redis/data:/data \
--v /home/redis/redis.conf:/etc/redis/redis.conf \
---name redis redis
-
-#构建jdk21运行环境
-docker build -t jdk21env:0.0.1 .
-
-# jdk21运行镜像编译
-docker build -f dockerfile -t hidewnd/winds-costing:0.0.2 .
-
-# 部署成本预算服务
-docker run -d -p 9001:9001\
--v /home/winds/:/app \
--e JAR_NAME=winds-costing.jar \
---name winds_costing jdk21env:0.0.1
-
-```
-
-
-## 目录结构描述
 ```text
-├── winds                                                       
-├── winds-costing                                  # 成本计算服务
-├── winds-application                              # 项目统一启动入口及配置
-│   ├── src
-│   │   ├── main
-│   │   │   ├── java
-│   │   │   └── resources
-│   │   │       └── application.yml                # 项目统一配置文件
-├── winds-costing                                  # 成本计算业务模块
-├── winds-aggregation                              # 蝗虫登记业务模块
-├── winds-common                                   # 通用包
-├── .gitignore
-├── pom.xml
+wind-jx3/
+├── winds-application/       # 统一启动与配置
+├── winds-common/            # 公共模型与基础能力
+├── winds-costing/           # 成本计算与 JX3API 代理
+├── winds-bot/               # 黄历业务
+├── winds-scout/             # 微博监控业务
+├── winds-ws/                # WebSocket 服务
+├── docs/                    # 接口与业务文档
+├── pom.xml                  # Maven 聚合 POM
 └── README.md
 ```
 
-## 特性
+## 快速开始
 
-> 字段说明
+### 环境要求
 
-- `server`：服务器名称
-- `formulaName`：技艺制品名称
-- `number`：数量
-- `cost`：成本价格
-- `rangeCreate`: 是否随机生成，否则按配方最小生成数计算
-- `costString`：成本价格格式化
-- `value`：交易行价格
-- `valueString`：交易行价格格式化
-- `actualProfit`：实际利润
-- `actualNumber`: 实际产出数量
-- `actualProfitString`：实际利润格式化
-- `requiredMap`：所需材料数量
+- JDK 21
+- Maven（仓库未提供 Maven Wrapper）
+- MongoDB
+- Redis
+- Alibaba Cloud OSS 配置
+- 可用的 JX3API 凭据；如启用微博监控，还需要有效的微博 Cookie
 
-### V0.0.0.2
-- 查询单个技艺制品成本：POST `/costing/one`
+### 配置
 
-> Request 
+应用配置统一位于 `winds-application/src/main/resources/`：
 
-` application/json`
-``` json
-{
-  "server": "剑胆琴心",
-  "formulaName": "[龙血磨石]",
-  "number": 1,
-  "rangeCreate": true
-}
+- `application.yml`：服务端口、缓存、文件上传与 OpenAPI 配置。
+- `application-dev.yml`：开发环境的 MongoDB、Redis、OSS、JX3API 和默认服务器配置。
 
+默认启用 `dev` Profile。首次启动前，请按部署环境检查以下配置组：
+
+| 配置前缀 | 用途 |
+| --- | --- |
+| `spring.data.mongodb` | MongoDB 连接与认证 |
+| `spring.data.redis` | Redis 连接与连接池 |
+| `aliyun.oss` | OSS Endpoint、Bucket 与访问凭据 |
+| `jx3api` | JX3API 地址、Token 与 Ticket |
+| `box.default.server` | 默认游戏服务器 |
+
+不要将真实密码、AccessKey、Token 或 Cookie 提交到版本控制。
+
+### 构建与启动
+
+Windows PowerShell：
+
+```powershell
+mvn.cmd clean package -DskipTests
+java.exe -jar .\winds-application\target\winds-application.jar
 ```
 
-> Response
+Linux 或 macOS：
 
-```json
-{
-  "success": true,
-  "code": 200,
-  "msg": "请求成功",
-  "obj": {
-    "server": null,
-    "type": null,
-    "formulaName": "龙血磨石",
-    "materialId": "5_31139",
-    "number": 1,
-    "cost": 13682720,
-    "costString": "1368金27银20铜",
-    "energies": 120,
-    "value": 15003900,
-    "valueString": "1500金39银",
-    "actualNumber": 1,
-    "actualProfit": 570985,
-    "actualProfitString": "57金9银85铜",
-    "requiredMap": {
-      "沉香木": {
-        "id": "5_30855",
-        "name": "沉香木",
-        "number": 5,
-        "value": 7074000,
-        "valueString": "707金40银"
-      },
-      "熟铁锭": {
-        "id": "5_71115",
-        "name": "熟铁锭",
-        "number": 20,
-        "value": 3803980,
-        "valueString": "380金39银80铜"
-      },
-      "硼砂": {
-        "id": "5_30679",
-        "name": "硼砂",
-        "number": 20,
-        "value": 825740,
-        "valueString": "82金57银40铜"
-      },
-      "木炭": {
-        "id": "5_31992",
-        "name": "木炭",
-        "number": 20,
-        "value": 120000,
-        "valueString": "12金"
-      },
-      "猫眼石": {
-        "id": "5_30852",
-        "name": "猫眼石",
-        "number": 5,
-        "value": 1859000,
-        "valueString": "185金90银"
-      }
-    },
-    "makeDetail": [
-      {
-        "no": 0,
-        "name": "龙血磨石",
-        "makeNumber": 1
-      }
-    ]
-  }
-}
-
+```bash
+mvn clean package -DskipTests
+java -jar winds-application/target/winds-application.jar
 ```
 
+服务默认监听 `9002` 端口。
 
-- 代理请求JX3API：POST `/proxy/jx3api`
+## 接口文档
 
-> Request
+启动应用后可访问：
 
-```json
-{
-  "url": "/data/saohua/random",
-  "params": {}
-}
+| 文档 | 地址 |
+| --- | --- |
+| Knife4j | `http://localhost:9002/doc.html` |
+| Swagger UI | `http://localhost:9002/swagger-ui.html` |
+| OpenAPI JSON | `http://localhost:9002/v3/api-docs` |
+
+主要接口分组：
+
+| 能力 | 接口 |
+| --- | --- |
+| 单个技艺成本计算 | `POST /costing/one` |
+| 批量技艺成本计算 | `POST /costing/list` |
+| JX3API 代理 | `POST /proxy/jx3api` |
+| 黄历图片更新 | `POST /thire/huangli/update` |
+| 微博监控管理 | `/scout/weibo/**` |
+| WebSocket 推送 | `/ws` |
+
+完整的请求头、参数、响应模型与示例见 [接口参考文档](docs/api-reference.md)。微博监控的集合与运行机制见 [微博监控服务说明](docs/weibo-scout.md)。
+
+## WebSocket
+
+WebSocket 与 HTTP 服务共用 `9002` 端口，连接地址为：
+
+```text
+ws://localhost:9002/ws?token=<WS_TOKEN>
 ```
-> Response
 
-```json
-{
-  "success": true,
-  "code": 2000,
-  "msg": "代理请求成功",
-  "obj": {
-    "code": 200,
-    "msg": "success",
-    "data": {
-      "id": 2655,
-      "text": "情缘请主动加我好友"
-    },
-    "time": 1723388083
-  }
-}
+也可以在握手请求中使用 `Authorization: Bearer <WS_TOKEN>`。Token 必须对应 MongoDB `ws_auth_token` 集合中的有效记录；微博管理接口还要求 `scout.weibo.manage` 权限。
+
+服务端事件包括：
+
+- `connection.success`：连接建立成功。
+- `huangli.updated`：黄历图片更新。
+- `weibo.updated`：微博动态更新。
+
+事件字段与完整 JSON 示例见 [接口参考文档](docs/api-reference.md#7-websocket-接口)。
+
+## 测试
+
+运行全部测试：
+
+```powershell
+mvn.cmd test
 ```
+
+运行指定模块及其依赖的测试：
+
+```powershell
+mvn.cmd -pl winds-scout -am test
+mvn.cmd -pl winds-ws -am test
+```
+
+执行完整 Reactor 校验：
+
+```powershell
+mvn.cmd clean verify -DskipTests=false
+```
+
+## 贡献
+
+欢迎通过 Issue 或 Pull Request 参与改进。提交变更前请：
+
+1. 保持现有模块职责与代码风格。
+2. 不提交密钥、Token、Cookie 等敏感信息。
+3. 为行为变更补充必要测试，并在 Pull Request 中说明验证结果。
+4. 同步更新受影响的接口文档和示例。
+
+## 许可证
+
+本项目基于 [Apache License 2.0](LICENSE) 开源。
